# cookiecutter-flask-basic

./: LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: .flaskenv.example  .gitignore  LICENSE  pyproject.toml  wsgi.py
{{cookiecutter.project_name}}/.github/workflows/: tests.yml
{{cookiecutter.project_name}}/tests/: test_{{cookiecutter.app_name}}.py
{{cookiecutter.project_name}}/{{cookiecutter.app_name}}/: __init__.py
