[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.app_version}}"
description = "{{cookiecutter.project_description}}"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]

[tool.poetry.dependencies]
python = "^{{cookiecutter.python_version}}"
Flask = "^1.1.2"
{%- if cookiecutter.heroku_deployment == "yes" -%}{{'\n'}}gunicorn = "^20.0.4"{% endif %}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
{%- if cookiecutter.include_flaskenv == "yes" -%}{{'\n'}}python-dotenv = "^0.15.0"{% endif %}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
